Se agrega la interfaz de para recuperar contraseña olvidada.

--- a/appautopro/app/login/login.css
+++ b/appautopro/app/login/login.css
@@ -4,7 +4,7 @@ FlexboxLayout {
   justify-content: center;
   align-items: center;
   background-size: contain;
-  background-image: url("~/images/autoprologo1.jpg");
+  background-image: url("~/images/background_auto.jpg");
 }
 StackLayout {
   width: 300;
